# CallMyAgentHackaton

./: .env  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json
api/: config.py  main.py  orchestrator.py  state.py
api/agents/: caller.py  query_parser.py
api/integrations/: agentphone.py  browser_use.py
api/scripts/: drive_e2e.py
app/: globals.css  page.tsx
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
components/: AgentPickStage.tsx  BookingModal.tsx  OfferTinderCard.tsx  PhaseIndicator.tsx  QueryBar.tsx  Stage.tsx  WinnerStage.tsx  icons.tsx
discord-messages-of-hackaton/: agentphone  browser-use
lib/: types.ts
lib/flow/: machine.ts
lib/providers/: CallProvider.ts  OfferProvider.ts  PaymentsProvider.ts  agentphoneCalls.ts  browseruseOffers.ts  clientCalls.ts  clientOffers.ts
lukasz/: .env.example  .gitignore  .npmrc  biome.json
lukasz/data/: mock-offers.ts
michal/: .env.example  README.md
michal/api/: cache.py  config.py  main.py  pyproject.toml
michal/api/agents/: booking.py  caller.py  filter.py  scout.py  tournament.py
michal/api/fixtures/: sf_houses.json
michal/api/integrations/: agentphone.py  sponge.py
michal/web/: next.config.mjs
piotr/web/: .env.example  package-lock.json  package.json
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
wojtek/: .env.example  README.md  package-lock.json  package.json
wojtek/app/: globals.css  layout.tsx  page.tsx
wojtek/components/: booking-modal.tsx  call-overlay.tsx  canvas.tsx  mini-map.tsx  (+10 more)
(+175 files in other folders)
