[project]
name = "flow-api"
version = "0.1.0"
description = "Flow UI backend - agentic housing search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "sse-starlette>=2.1.3",
]

[tool.uv]
package = false
